--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
@@ -75,22 +75,22 @@
 
             <ul>
                 <li>
-                    <img src="./images/team/Demyanenko.jpg" alt="" width="270" height="260">
+                    <img src="./images/team/Demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/team/Repina.jpg" alt="" width="270" height="260">
+                    <img src="./images/team/Repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/team/Tarasov.jpg" alt="" width="270" height="260">
+                    <img src="./images/team/Tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/team/Yermakov.jpg" alt="" width="270" height="260">
+                    <img src="./images/team/Yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -104,8 +104,8 @@
 
         <address>
             м. Київ, пр-т Лесі Українки, 26 <br>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
     </footer>
 </body>
