--- a/index.html
+++ b/index.html
@@ -2,112 +2,124 @@
 <html lang="uk">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstudio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Студія</title>
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <nav>
-            <a href="" target="_blank"><span>Web</span>studio</a>
+  <!-- git clone ...
+  git remote set-url origin ...
+  git add .
+  git commit -m -->
 
-            <ul>
-                <li><a href="" target="_blank">Студія</a></li>
-                <li><a href="" target="_blank">Портфоліо</a></li>
-                <li><a href="" target="_blank">Контакти</a></li>
-            </ul>
-        </nav>
+  <!-- HEADER -->
+  <header class="page-header">
+    <nav>
+      <a href="index.html" class="logo">
+        Web<span class="logo-header">studio</span>
+      </a>
 
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </header>
+      <ul class="site-nav list">
+        <li><a href="index.html" class="link current">Студія</a></li>
+        <li><a href="portfolio.html" class="link">Портфоліо</a></li>
+        <li><a href="" class="link">Контакти</a></li>
+      </ul>
+    </nav>
 
-    <!-- Main -->
-    <main>
-        <!-- Герой -->
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
-        </section>
+    <ul class="contacts-nav list">
+      <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+    </ul>
+  </header>
 
-        <!-- Особливості -->
-        <section>
-            <h2>Особливості</h2>
-            <ul>
-                <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-                </li>
-                <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
-        </section>
+  <!-- MAIN -->
+  <main>
+    <!-- Герой -->
+    <section class="hero">
+      <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+      <button type="button" class="hero-button">Замовити послугу</button>
+    </section>
 
-        <!-- Чим ми займаємось -->
-        <section>
-            <h2>Чим ми займаємося</h2>
+    <!-- Особливості -->
+    <section class="section">
+      <h2 class="section-title">Особливості</h2>
 
-            <ul>
-                <li><img src="./images/coding.jpg" alt="Програмування" width="370" height="294"></li>
-                <li><img src="./images/webdesing.jpg" alt="Веб-дизайн" width="370" height="294"></li>
-                <li><img src="./images/design.jpg" alt="Дизайн" width="370" height="294"></li>
-            </ul>
-        </section>
+      <ul class="features-list list">
+        <li>
+          <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        </li>
+        <li>
+          <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+        </li>
+        <li>
+          <h3 class="title">ПЛАНУВАННЯ</h3>
+          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+        </li>
+        <li>
+          <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+        </li>
+      </ul>
+    </section>
 
-        <!-- Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
+    <!-- Чим ми займаємось -->
+    <section class="section">
+      <h2 class="section-title">Чим ми займаємося</h2>
 
-            <ul>
-                <li>
-                    <img src="./images/team/Demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/team/Repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                    <h3>Ольга Рєпіна</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/team/Tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/team/Yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
-        </section>
-    </main>
+      <ul class="list">
+        <li><img src="./images/coding.jpg" alt="Програмування" width="370" height="294"></li>
+        <li><img src="./images/webdesing.jpg" alt="Веб-дизайн" width="370" height="294"></li>
+        <li><img src="./images/design.jpg" alt="Дизайн" width="370" height="294"></li>
+      </ul>
+    </section>
 
-    <!-- Footer -->
-    <footer>
-        <a href="" target="_blank"><span>Web</span>studio</a>
+    <!-- Наша команда -->
+    <section class="section team">
+      <h2 class="section-title">Наша команда</h2>
 
-        <address>
-            м. Київ, пр-т Лесі Українки, 26 <br>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </address>
-    </footer>
+      <ul class="team-list list">
+        <li>
+          <img src="./images/team/Demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+          <h3 class="title">Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./images/team/Repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
+          <h3 class="title">Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./images/team/Tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
+          <h3 class="title">Микола Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./images/team/Yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
+          <h3 class="title">Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="page-footer">
+    <a href="index.html" class="logo">
+      Web<span class="logo-footer">studio</span>
+    </a>
+
+    <address class="contact">
+      м. Київ, пр-т Лесі Українки, 26 <br>
+      <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> <br>
+      <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+    </address>
+  </footer>
 </body>
 
 </html>
