--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Студія</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -20,7 +26,7 @@
   <header class="page-header">
     <nav>
       <a href="index.html" class="logo">
-        Web<span class="logo-header">studio</span>
+        Web<span class="logo-header">Studio</span>
       </a>
 
       <ul class="site-nav list">
@@ -50,20 +56,20 @@
 
       <ul class="features-list list">
         <li>
-          <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+          <h3 class="title">Увага до деталей</h3>
+          <p class="description">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li>
-          <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-          <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <h3 class="title">Пунктуальність</h3>
+          <p class="description">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-          <h3 class="title">ПЛАНУВАННЯ</h3>
-          <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <h3 class="title">Планування</h3>
+          <p class="description">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li>
         <li>
-          <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-          <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <h3 class="title">Сучасні технології</h3>
+          <p class="description">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
       </ul>
     </section>
@@ -86,23 +92,23 @@
       <ul class="team-list list">
         <li>
           <img src="./images/team/Demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-          <h3 class="title">Ігор Дем'яненко</h3>
-          <p>Product Designer</p>
+          <h3 class="username">Ігор Дем'яненко</h3>
+          <p class="direction">Product Designer</p>
         </li>
         <li>
           <img src="./images/team/Repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
-          <h3 class="title">Ольга Рєпіна</h3>
-          <p>Frontend Developer</p>
+          <h3 class="username">Ольга Рєпіна</h3>
+          <p class="direction">Frontend Developer</p>
         </li>
         <li>
           <img src="./images/team/Tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
-          <h3 class="title">Микола Тарасов</h3>
-          <p>Marketing</p>
+          <h3 class="username">Микола Тарасов</h3>
+          <p class="direction">Marketing</p>
         </li>
         <li>
           <img src="./images/team/Yermakov.jpg" alt="Михайло Єрмаков" width="270" height="260">
-          <h3 class="title">Михайло Єрмаков</h3>
-          <p>UI Designer</p>
+          <h3 class="username">Михайло Єрмаков</h3>
+          <p class="direction">UI Designer</p>
         </li>
       </ul>
     </section>
@@ -111,7 +117,7 @@
   <!-- FOOTER -->
   <footer class="page-footer">
     <a href="index.html" class="logo">
-      Web<span class="logo-footer">studio</span>
+      Web<span class="logo-footer">Studio</span>
     </a>
 
     <address class="contact">
