--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Портфоліо</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="portfolio.css">
+  <link rel="stylesheet" href="css/portfolio.css">
 </head>
 
 <body>
@@ -34,12 +40,12 @@
     <section>
       <h1>Приклади робіт</h1>
 
-      <ul class="list">
-        <li><button type="button">Усі</button></li>
-        <li><button type="button">Веб-сайти</button></li>
-        <li><button type="button">Додатки</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+      <ul class="selection-list list">
+        <li><button type="button" class="btn">Усі</button></li>
+        <li><button type="button" class="btn">Веб-сайти</button></li>
+        <li><button type="button" class="btn">Додатки</button></li>
+        <li><button type="button" class="btn">Дизайн</button></li>
+        <li><button type="button" class="btn">Маркетинг</button></li>
       </ul>
 
       <ul class="examples-list list">
